[tool.poetry]
name = "expression-validator"
version = "0.1.0"
description = ""
authors = ["Beatriz Santana <beatrizbritosantana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
